# aoc2019rs

./: .gitignore  Cargo.toml  create_puzzles.sh  flake.nix  puzzles.sh
.github/workflows/: build_nix.yml
day00/: Cargo.toml
day00/src/: lib.rs
day01/: Cargo.toml
day01/src/: lib.rs
day02/: Cargo.toml
day02/src/: lib.rs
intcode/src/: lib.rs
src/: main.rs
