[package]
name = "day02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode = { version = "0.1.0", path = "../intcode" }
solver = { git = "https://github.com/JoBoCl/solver", version = "0.1.0" }
